--- a/Section-3/index.html
+++ b/Section-3/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
   <p><uc-tooltip text="Web Components is a set of standards">Web Components</uc-tooltip> are awesome</p>
-  <uc-tooltip>Here we go!</uc-tooltip>
+  <uc-tooltip></uc-tooltip>
 </body>
 </html>
