--- a/Section-3/index.html
+++ b/Section-3/index.html
@@ -6,9 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Web Components</title>
   <script src="tooltip.js"></script>
+  <script src="confirm-link.js"></script>
 </head>
 <body>
   <p><uc-tooltip text="Web Components is a set of standards">Web Components</uc-tooltip> are awesome</p>
   <uc-tooltip></uc-tooltip>
+  <a is="uc-confirm-link" href="https://www.google.com">Google</a>
 </body>
 </html>
